[package]
name = "graphus-dst"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license-file.workspace = true
repository.workspace = true
authors.workspace = true
description = "Deterministic simulation harness and fault injection for Graphus."

[lib]
name = "graphus_dst"
path = "src/lib.rs"

[[bin]]
name = "graphus-dst"
path = "src/main.rs"

[dependencies]
graphus-core = { path = "../graphus-core" }
graphus-sim = { path = "../graphus-sim" }
graphus-io = { path = "../graphus-io" }
graphus-wal = { path = "../graphus-wal" }
graphus-bufpool = { path = "../graphus-bufpool" }
graphus-storage = { path = "../graphus-storage" }
# The real engine, driven inline + single-threaded for the wire-level VOPR simulator
# (`vopr` module, rmp #162): `graphus_server::engine::LocalEngine`. graphus-server does not depend on
# graphus-dst, so this is acyclic.
graphus-server = { path = "../graphus-server" }
