[package]
name = "graphus-dst"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license-file.workspace = true
repository.workspace = true
authors.workspace = true
description = "Deterministic simulation harness and fault injection for Graphus."

[lib]
name = "graphus_dst"
path = "src/lib.rs"

[[bin]]
name = "graphus-dst"
path = "src/main.rs"

[dependencies]
graphus-core = { path = "../graphus-core" }
graphus-sim = { path = "../graphus-sim" }
graphus-io = { path = "../graphus-io" }
graphus-wal = { path = "../graphus-wal" }
graphus-bufpool = { path = "../graphus-bufpool" }
# `dst` exposes `RecordStore::device_mut`, the live-device fault seam the harness uses to arm a
# write I/O error + read corruption on a running store mid-workload (rmp #232). The seam is
# test-only; enabling it here keeps it out of every production crate's build.
graphus-storage = { path = "../graphus-storage", features = ["dst"] }
# The real engine, driven inline + single-threaded for the wire-level VOPR simulator
# (`vopr` module, rmp #162): `graphus_server::engine::LocalEngine`. graphus-server does not depend on
# graphus-dst, so this is acyclic.
graphus-server = { path = "../graphus-server" }
# The REAL Bolt protocol stack (handshake/framing/PackStream/BoltSession/BoltExecutor) so the wire
# simulator (`wire` module, rmp #163) drives a genuine Bolt session over the simulated network.
graphus-bolt = { path = "../graphus-bolt" }
# The Bolt session's `AuthProvider` (a real `Authenticator`) for the LOGON exchange.
graphus-auth = { path = "../graphus-auth" }
# The REAL REST request core (rmp #164): `execute_autocommit` + `RestEngine`/`AppState`, driven over
# the deterministic engine without the axum/socket layer.
graphus-rest = { path = "../graphus-rest" }
# The Elle/Adya isolation checker (rmp #170) + the engine's MaterializedValue result cells, so the
# harness can record real transaction histories and certify serializability end-to-end.
graphus-elle = { path = "../graphus-elle" }
graphus-cypher = { path = "../graphus-cypher" }
# Builds/parses the REST JSON request body for the transport-fault harness (rmp #234), modelling a
# truncated/reset HTTP body before it reaches the request core. Already a transitive dep via graphus-rest.
serde_json = "1"
