[package]
name = "graphus-dst"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license-file.workspace = true
repository.workspace = true
authors.workspace = true
description = "Deterministic simulation harness and fault injection for Graphus."

[lib]
name = "graphus_dst"
path = "src/lib.rs"

[[bin]]
name = "graphus-dst"
path = "src/main.rs"

[dependencies]
graphus-core = { path = "../graphus-core" }
graphus-sim = { path = "../graphus-sim" }
graphus-io = { path = "../graphus-io" }
graphus-wal = { path = "../graphus-wal" }
graphus-bufpool = { path = "../graphus-bufpool" }
# `dst` exposes `RecordStore::device_mut`, the live-device fault seam the harness uses to arm a
# write I/O error + read corruption on a running store mid-workload (rmp #232). The seam is
# test-only; enabling it here keeps it out of every production crate's build.
graphus-storage = { path = "../graphus-storage", features = ["dst"] }
# The real engine, driven inline + single-threaded for the wire-level VOPR simulator
# (`vopr` module, rmp #162): `graphus_server::engine::LocalEngine`. graphus-server does not depend on
# graphus-dst, so this is acyclic.
graphus-server = { path = "../graphus-server", features = ["dst"] }
# The REAL Bolt protocol stack (handshake/framing/PackStream/BoltSession/BoltExecutor) so the wire
# simulator (`wire` module, rmp #163) drives a genuine Bolt session over the simulated network.
graphus-bolt = { path = "../graphus-bolt" }
# The Bolt session's `AuthProvider` (a real `Authenticator`) for the LOGON exchange.
graphus-auth = { path = "../graphus-auth" }
# The REAL REST request core (rmp #164): `execute_autocommit` + `RestEngine`/`AppState`, driven over
# the deterministic engine without the axum/socket layer.
graphus-rest = { path = "../graphus-rest" }
# The Elle/Adya isolation checker (rmp #170) + the engine's MaterializedValue result cells, so the
# harness can record real transaction histories and certify serializability end-to-end.
graphus-elle = { path = "../graphus-elle" }
graphus-cypher = { path = "../graphus-cypher" }
# The backup-envelope seal/open (rmp #89: `seal_backup`/`open_backup`) so the backup→file→restore /
# key-rotation crash scenario (rmp #440) drives the genuine encrypted-artifact pipeline and asserts a
# restore succeeds under exactly the expected key (and fails closed under a wrong key). `graphus-crypto`
# depends only on graphus-core/io/wal (never on graphus-dst), so this is acyclic. Already a transitive
# dep via graphus-server; named here so the scenario can call the seal/open API directly.
graphus-crypto = { path = "../graphus-crypto" }
# Builds/parses the REST JSON request body for the transport-fault harness (rmp #234), modelling a
# truncated/reset HTTP body before it reaches the request core. Already a transitive dep via graphus-rest.
serde_json = "1"
# Derive `Serialize`/`Deserialize` for `VoprConfig` (+ `MixProfile`/`LoadProfile`/`FaultBudget`) so a
# failing run round-trips to/from a JSON reproducer artifact (rmp #242). Test/CLI-only persistence — the
# production server crates do not depend on graphus-dst, so this never reaches a production build.
serde = { version = "1", features = ["derive"] }

[dev-dependencies]
# The MVCC visibility primitives (`is_visible`/`Snapshot`/`CommitRegistry`) for the GC-watermark
# regression guard (`tests/gc_watermark_teeth.rs`, rmp #337 Slice 2): the test resolves what an old
# reader sees exactly as the production read path does. `graphus-txn` is foundational (storage depends
# on it), so this is acyclic. Test-only — it never reaches a production build.
graphus-txn = { path = "../graphus-txn" }
