[package]
name = "graphus-gds"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license-file.workspace = true
repository.workspace = true
authors.workspace = true
description = "In-memory CSR graph projection and a library of production-grade graph data science algorithms."

[dependencies]

[dev-dependencies]
proptest = "1.11.0"
