[package]
name = "graphus-index"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license-file.workspace = true
repository.workspace = true
authors.workspace = true
description = "B+-tree, token-lookup, composite and relationship-property indexes and constraints."

[dependencies]
graphus-core = { path = "../graphus-core" }
graphus-io = { path = "../graphus-io" }
graphus-bufpool = { path = "../graphus-bufpool" }
graphus-wal = { path = "../graphus-wal" }
roaring = { version = "0.11.3", default-features = false, features = ["std"] }

[dev-dependencies]
graphus-sim = { path = "../graphus-sim" }
