[package]
name = "graphus-io"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license-file.workspace = true
repository.workspace = true
authors.workspace = true
description = "Async file and socket I/O for Graphus (epoll/kqueue baseline + optional io_uring)."

# `loom` is a known test-only cfg (set via `RUSTFLAGS="--cfg loom"` when model-checking the
# buffer pool, which depends on this crate's synchronous `BlockDevice` half). Under it, the
# Tokio-backed async modules are gated out (see `src/lib.rs`). Register the cfg so `unexpected_cfgs`
# — and therefore `clippy -D warnings` — stays quiet without a build script.
[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(loom)'] }

[features]
# Optional Linux-only io_uring fast path (`D-io-backend`, `04 §9.1`/§3.6). Off by default so the
# portable build never pulls a Linux-only dependency and stays `#![forbid(unsafe_code)]`. When
# enabled on Linux it activates a real `io_uring_setup(2)` capability probe (via `libc`); the
# submission path itself is stubbed pending the `io-uring` crate (see `uring.rs`). The Tokio
# baseline always carries correctness; this is a perf path with guaranteed fallback.
io-uring = ["dep:libc"]

# Optional Linux-only copy-free coalesced checkpoint write (`rmp` #374, `04 §3.6`). When enabled on
# Linux, `FileBlockDevice::write_pages` emits a contiguous run of dirty pages with one scatter/gather
# `pwritev(2)` that borrows the page buffers directly (no staging copy), instead of the portable
# safe fallback (one concatenated `write_all_at`). It carries a single, narrowly-scoped, `// SAFETY:`
# -documented `unsafe` block — exactly like the `io-uring` probe — so the default build (feature off)
# stays `#![forbid(unsafe_code)]`. `libc` is already an unconditional `cfg(unix)` dependency below,
# so this feature pulls in nothing new; it only unlocks the fast path and relaxes the crate lint.
pwritev = []

[dependencies]
# Shared error taxonomy / IDs. The new async layer surfaces `std::io::Result` at its edges (it is a
# low-level substrate the server (#20) maps onto `GraphusError`), so `graphus-core` is used lightly
# here, consistent with the synchronous `BlockDevice` side.
graphus-core = { path = "../graphus-core" }

# Async runtime for the listener/stream layer and the fsync offload. `net` = TCP/UDS sockets +
# `peer_cred`; `io-util` = `AsyncRead`/`AsyncWrite` + copy helpers; `rt`/`rt-multi-thread` = the
# work-stealing runtime that drives accept loops; `sync` = the `oneshot`/`Semaphore` the fsync pool
# uses. Matches the pin already used by `graphus-rest`. (`04 §9.1`.)
tokio = { version = "1", default-features = false, features = [
    "net",
    "io-util",
    "rt",
    "rt-multi-thread",
    "sync",
] }

# io_uring capability probe only (`io_uring_setup(2)` + `close(2)`); pulled in solely by the
# optional `io-uring` feature, Linux-only. Not in the default build on non-macOS targets.
libc = { version = "0.2", optional = true }

# `libc` is needed unconditionally on every Unix target for the platform-correct `O_NOFOLLOW`
# constant used by the symlink-resistant temp-file creation in `atomic_replace_file`
# (`src/replace.rs`, CWE-59/CWE-377 fix). It is read as a plain integer constant — no `unsafe` — so
# the portable build stays `#![forbid(unsafe_code)]`. macOS additionally uses it for the
# `fcntl(fd, F_FULLFSYNC)` durability barrier (APFS/HFS+ do not flush the drive's volatile write
# cache on a plain `fsync`; only `F_FULLFSYNC` does — see `src/fullsync.rs`).
[target.'cfg(unix)'.dependencies]
libc = "0.2"

[dev-dependencies]
# `macros` + `time` enable `#[tokio::test]` and timeouts in the loopback round-trip tests; `net` is
# already on for the lib. Tests bind `127.0.0.1:0` and a temp UDS path in-process (`04 §9.1`, the
# hard rule: no blocking syscalls on runtime workers — durability syscalls go to the fsync pool).
tokio = { version = "1", default-features = false, features = [
    "net",
    "io-util",
    "rt",
    "rt-multi-thread",
    "macros",
    "time",
    "sync",
] }
# Micro-benchmark of the epoll/kqueue baseline loopback path (the AC: "benchmarked vs the
# epoll/kqueue baseline"). `async_tokio` gives `Bencher::to_async` (the loopback/fsync benches are
# async); `cargo_bench_support` is what lets `cargo bench` actually run the harness. `plotters`/
# `rayon`/`html_reports` are left off to keep the dev build lean (no gnuplot/HTML output needed).
criterion = { version = "0.5", default-features = false, features = [
    "async_tokio",
    "cargo_bench_support",
] }

[[bench]]
name = "loopback"
harness = false
